--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.1",
     "@googlemaps/js-api-loader": "^1.12.5",
     "@material-table/core": "^0.2.5",
     "@material-ui/core": "^4.12.3",
