--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/mulish": "^4.5.1",
     "@fontsource/roboto": "^4.5.1",
     "@googlemaps/js-api-loader": "^1.12.5",
     "@material-table/core": "^0.2.5",
@@ -27,6 +28,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "victory": "^36.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
