--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^4.0.1",
+    "@nivo/core": "^0.74.0",
+    "@nivo/line": "^0.74.0",
     "@react-google-maps/api": "^2.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -29,6 +31,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.4",
     "victory": "^36.0.1",
     "web-vitals": "^1.1.2"
   },
